<resources>
    <string name="app_name">SchemeLaunchPad</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="rename">Rename</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="x_percent">%d%%</string>
    <string name="settings">Settings</string>
    <string name="table_config">Table Config</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="number">Number</string>
    <string name="margin">Margin</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="column">Column</string>
    <string name="row">Row</string>
    <string name="title">Title</string>
    <string name="click_command">Click command</string>
    <string name="long_click_command">Long click Command</string>
    <string name="tip_no_activity">No Activity found</string>
    <string name="tip_add_command_first">Add command first</string>
    <string name="choose_config">Choose Config</string>
    <string name="name_already_exits">Name already exits</string>
</resources>